# stimojo

./: .gitignore  BUILD.bazel  README.md  pixi.toml
benchmarks/: bit_matrix_benchmark.mojo  pauli_product_benchmark.mojo  run_all_benchmarks.mojo
examples/: bit_tensor.mojo  pauli_string.mojo  tableau.mojo  tableau_conjugation.mojo
scripts/: mojo_wrap.sh
src/: pauli_product_benchmark.mojo
src/stimojo/: __init__.mojo  bit_tensor.mojo  ops.mojo  pauli.mojo  tableau.mojo  xzencoding.mojo
test/stimojo/: test_bit_tensor.mojo  test_memory_safety.mojo  test_ops.mojo  test_pauli.mojo  test_pauli_string.mojo  test_phase.mojo  test_tableau.mojo  test_tableau_ops.mojo  test_xz_encoding.mojo  test_xzencoding.mojo
