load("//bazel:api.bzl", "mojo_binary", "mojo_library", "mojo_test")

mojo_library(
    name = "stimojo",
    srcs = glob(["src/stimojo/*.mojo"]),
    deps = [
        "@mojo//:stdlib",
    ],
)

mojo_binary(
    name = "run_all_benchmarks",
    srcs = ["benchmarks/run_all_benchmarks.mojo"],
    deps = [
        ":stimojo",
        "@mojo//:stdlib",
    ],
)

mojo_test(
    name = "test_pauli_string",
    srcs = [
        "test/stimojo/test_pauli_string.mojo",
    ],
    deps = [
        ":stimojo",
        "@mojo//:stdlib",
    ],
)

mojo_test(
    name = "test_ops",
    srcs = [
        "test/stimojo/test_ops.mojo",
    ],
    deps = [
        ":stimojo",
        "@mojo//:stdlib",
    ],
)

mojo_test(
    name = "test_memory_safety",
    srcs = [
        "test/stimojo/test_memory_safety.mojo",
    ],
    deps = [
        ":stimojo",
        "@mojo//:stdlib",
    ],
)